[project]
name = "letpub-crawler"
version = "0.1.0"
description = "A distributed web crawler for scraping journal data from LetPub.com.cn"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.12",
    "beautifulsoup4>=4.12.0",
    "lxml>=6.0.2",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
crawler = [
    "playwright>=1.49.0",
    "tf-playwright-stealth>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring running Clash Verge",
]
testpaths = ["tests"]
# 这两个文件是手动调试脚本（接受 argparse 参数），非 pytest 测试，跳过收集
# 默认 -m "not integration" 跳过需 Verge 运行的集成测；显式跑用 -m integration
addopts = "--ignore=tests/test_comments_api.py --ignore=tests/test_detail_crawler.py -m \"not integration\""
